--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fire Alarm Detector</title>
-  <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     </footer>
   </div>
 
-  <script type="module" src="/static/app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
